libs/@local/hashql/hir/tests/ui/lower/alias-replacement/generic-reassignment.jsonc
//@ run: pass
//@ description: Alias replacement with generics should work
[
  "let",
  "foo",
  "core::math::add<Integer>",
  [
    "let",
    "bar",
    "foo<Number>",
    //~^ ERROR additional type arguments are provided here
    "bar"
  ]
]
